fixed spacing to top

--- a/public/stylesheets/style.styl
+++ b/public/stylesheets/style.styl
@@ -74,7 +74,7 @@ body {
       margin: 0
 
       &:first-of-type {
-        margin-top: 60px
+        margin-top: 92px
       }
 
       > li {
@@ -105,6 +105,12 @@ body {
           }
         }
       }
+    }
+  }
+
+  .documentation-content {
+    h2, h3 {
+      padding-top: 90px
     }
   }
 }
